# in-toto-layout-generator

./: .gitignore  README.md  pyproject.toml
src/in_toto_layout_generator/: __init__.py  config_layout.py  in_toto_layout_gen.py
tests/: test.toml  test.yaml
